# goingmeta

./: README.md
future_sessions/: neo4j.ttl  organization.ttl
session01/: data_import.md  queries.adoc
session02/: build-kg.cypher  queries.md
session02/resources/: goingmeta-skos.ttl
session03/: goingmeta-3.adoc
session03/dashboard/: neodash-shacl.json
session03/shapes/: northwind-shacl.ttl  (+1 more)
session04/: goingmeta-4.adoc
session05/: Ontology_Driven_KG_creation.ipynb
session1/: queries.adoc
session11/: Going_Meta_11_Graph_Expectations.ipynb
session12/: RDFLib_Neo4j_Example.ipynb
session17/: queries.md
session18/: Easy_full_graph_migration_from_triple_stores.ipynb  neptune_migration.ipynb
session19/: versioning_ontos.ipynb
session2/: build-kg.cypher  devto-articles.csv  queries.md
session21/: session.cql
session22/: goingmeta_22.ipynb  session.cql  summaries.csv
session23/: README.md
session24/: README.md  gm24-onto-legislation.ttl
session27/: GoingMeta_27_Building_a_Reflection_Agent_with_LangGraph.ipynb
session28/: cypher.adoc
session3/: goingmeta-3.adoc
session32/: pyproject.toml
session32/data/crm/: Customers.csv  Locations.csv  Purchases.csv
session32/ontos/: generated_from_di_model.ttl  insurance.ttl
session32/python/: DIMNodeDef.py  DIModelBuilder.py  DiModelParser.py  RAGSchemaFromOnto.py  onto_to_neo4j_model.py  simple.py
session34/: notes.txt  tools_config.json
session4/: goingmeta-4.adoc
session43/: GM_S3_5_AgentMemory.ipynb
session44/: GM_S3_6_validations.ipynb
session5/: Ontology_Driven_KG_creation.ipynb
(+144 files in other folders)
